--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,12 @@ html(lang='en')
     link(rel='shortcut icon', href='/images/favicon.png', type='image/png')
     link(rel='stylesheet', href='/stylesheets/tachyons.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(async='' src=`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`)
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '#{GA_ID}');
   body(class="sans-serif f4")
     block content
     div(class="pa5 f6 lh-copy")
